Started work on resume section

--- a/pages/resume.html
+++ b/pages/resume.html
@@ -1,8 +1,8 @@
 ---
-layout: no-header-default
+layout: printable-default
 title: Resume
 weight: 4
 permalink: /resume/
 ---
 
-Test resume
+{% include resume.html %}
